# vietvoicetts

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  basic_usage.py  pyproject.toml  requirements.txt  setup.py
vietvoicetts/: __init__.py  __main__.py  api.py  cli.py
vietvoicetts/core/: __init__.py  audio_processor.py  model.py  model_config.py  text_processor.py  tts_engine.py
